--- a/competition/templates/competition/my_results.html
+++ b/competition/templates/competition/my_results.html
@@ -39,7 +39,7 @@
                                                 #{{ essay.competition_rank }}
                                             </span>
                                         </td>
-                                        <td>{{ essay.topic_score }}</td>
+                                        <td>{{ essay.title_relevance_score }}</td>
                                         <td>{{ essay.cohesion_score }}</td>
                                         <td>{{ essay.grammar_score }}</td>
                                         <td>{{ essay.structure_score }}</td>
